@@ -7,3 +7,4 @@
 - hunter Readiness fully implemented, including cross-addon communications
 - do not send target name to raid channel for auras
 - addon communication channel load reduced (performance improvement)
+- Guardian Spirit proc shared to all players with HomeCheck installed
